[gd_scene load_steps=6 format=3 uid="uid://c1kuvycngsn01"]

[ext_resource type="PackedScene" uid="uid://cy18j8rddwef6" path="res://assets/gltf/car_police.gltf" id="1_6lshv"]
[ext_resource type="Script" path="res://player.gd" id="2_hykns"]
[ext_resource type="Script" path="res://car_police.gd" id="3_gg5mr"]
[ext_resource type="Script" path="res://camera_rig.gd" id="4_6na8t"]
[ext_resource type="PackedScene" uid="uid://dfx4y33eelkhi" path="res://scenes/camera_3d.tscn" id="5_hi123"]

[node name="player" groups=["player"] instance=ExtResource("1_6lshv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
script = ExtResource("2_hykns")

[node name="car_police" parent="." index="0" groups=["player"]]
collision_mask = 2
can_sleep = false
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("3_gg5mr")
move_force = 20.085

[node name="LeftHeadlight" type="SpotLight3D" parent="car_police" index="6"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -0.1, 0.2, 0.455)
light_energy = 5.0
shadow_enabled = true
spot_range = 6.433
spot_angle = 35.91
spot_angle_attenuation = 0.784584

[node name="RightHeadlight" type="SpotLight3D" parent="car_police" index="7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.1, 0.2, 0.455)
light_energy = 5.0
spot_range = 6.92888

[node name="BlueLight" type="SpotLight3D" parent="car_police" index="8"]
transform = Transform3D(-4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, -0.2, 0.69, -0.048)
light_color = Color(0, 0, 1, 1)
light_energy = 4.0

[node name="RedLight" type="SpotLight3D" parent="car_police" index="9"]
transform = Transform3D(-4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 0.2, 0.69, -0.048)
light_color = Color(1, 0, 0, 1)
light_energy = 4.0

[node name="CameraRig" type="Node3D" parent="." index="1" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.225798, -0.804405)
script = ExtResource("4_6na8t")
player = NodePath("../car_police")
stage_dimensions = Vector2(20, 40)

[node name="Camera3D" parent="CameraRig" index="0" instance=ExtResource("5_hi123")]
transform = Transform3D(-1, 3.90806e-08, -1.45851e-07, 0, 0.965926, 0.258819, 1.50996e-07, 0.258819, -0.965926, 0.108612, 0.687875, -1.37575)
fov = 115.194

[connection signal="body_entered" from="car_police" to="car_police" method="_on_body_entered"]
